--- a/camellia espresso/css/main.css
+++ b/camellia espresso/css/main.css
@@ -5,6 +5,10 @@
 html body{
     height: 100%;
 }
+body{
+    background-attachment: fixed;
+}
+
 /*+-+-Navigation Bar Started*/
 header{
     height: 50px;
@@ -48,3 +52,58 @@ li>.x{
 }
 
 /*+-+-Navigation Bar Ended*/
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+/*+-+-foreground img and camellia text*/
+
+.top{
+    margin: 2cm 4cm ;
+
+}
+.x{
+    border-radius: 5%;
+}
+
+#layer1{
+    font-size: 72pt;
+    font-family: cursive;
+    color:greenyellow;
+}
+/*+-+-+-Tea and Coffee shop+-+-+-*/
+
+div.gallery {
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    margin-left: 300px;
+    border-style: none;
+  }
+  div.gallery:hover{
+    border-style: none;
+
+  }
+  div.gallery img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+
+  }
