--- a/camellia espresso/css/sell.css
+++ b/camellia espresso/css/sell.css
@@ -1,3 +1,39 @@
 body{
-    background-color: aqua;
+	background-color:rgba(14, 119, 14, 0.692);
 }
+
+.wrap{
+	width: 1000px;
+	margin: auto;
+	margin-top: 100px;
+}
+
+
+
+.card{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,6);
+	transition: 0.4s;
+	width: 300px;
+	background: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-family: sans-serif;
+	float: left;
+	margin: 15px
+}
+
+img {
+	max-width: 100%;
+	min-width: 100%;
+	height: 350px;
+	width: 200px;
+}
+
+.card:hover{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,6);
+	
+}
+.container{
+	padding : 3px 16px;
+}
+
