--- a/camellia espresso/css/sell.css
+++ b/camellia espresso/css/sell.css
@@ -1,7 +1,3 @@
-body{
-	background-color:rgba(14, 119, 14, 0.692);
-}
-
 .wrap{
 	width: 1000px;
 	margin: auto;
@@ -37,3 +33,6 @@ img {
 	padding : 3px 16px;
 }
 
+.font{
+	font-size: 8pt;
+}
