--- a/camellia espresso/css/sell.css
+++ b/camellia espresso/css/sell.css
@@ -15,7 +15,8 @@
 	font-size: 16px;
 	font-family: sans-serif;
 	float: left;
-	margin: 15px
+	margin: 15px;
+	border-radius:10%;
 }
 
 img {
@@ -23,6 +24,7 @@ img {
 	min-width: 100%;
 	height: 350px;
 	width: 200px;
+	border-radius:10%;
 }
 
 .card:hover{
