--- a/camellia espresso/css/main.css
+++ b/camellia espresso/css/main.css
@@ -24,7 +24,7 @@ header{
 }
 nav> a {
     text-decoration: none;
-    color: white;
+    color: rgb(172, 102, 11);
     font-size: 16pt;
     padding: 10px 20px;
     margin-left: 8px;
