--- a/camellia espresso/css/suchith.css
+++ b/camellia espresso/css/suchith.css
@@ -39,3 +39,22 @@ img {
 	font-size: 8pt;
 }
 
+/*For tea*/
+
+.cardt{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,6);
+	transition: 0.4s;
+	width: 300px;
+	background: rgb(129, 224, 5);
+	text-align: center;
+	font-size: 16px;
+	font-family: sans-serif;
+	float: left;
+	margin: 15px;
+	
+}
+
+.cardt:hover{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,6);
+	
+}
