--- a/camellia espresso/css/shop.css
+++ b/camellia espresso/css/shop.css
@@ -1,37 +1,16 @@
-*
-{
-    margin:0;
-    padding:0;
-}
-.header
-{
-    height: 100vh;
-}
-.video-background
-{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height:100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
 
+* {
+  box-sizing: border-box;
 }
-@media (min-aspect-ratio:16/9)
-{
-    .video-background
-    {
-        width:100%;
-        height: auto;
-    }
-}
-@media (max-aspect-ratio:16/9)
-{
-    .video-background
-    {
-        width: auto;
-        height: 100%;
-    }
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; 
+  
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
