--- a/camellia espresso/css/sell.css
+++ b/camellia espresso/css/sell.css
@@ -10,7 +10,7 @@
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,6);
 	transition: 0.4s;
 	width: 300px;
-	background: #fff;
+	background: rgba(106, 214, 17, 0.8);
 	text-align: center;
 	font-size: 16px;
 	font-family: sans-serif;
