--- a/camellia espresso/css/main.css
+++ b/camellia espresso/css/main.css
@@ -82,7 +82,7 @@ div.gallery {
 
 #layer1{
     font-size: 72pt;
-    font-family: cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:greenyellow;
     align-items: center;
 }
@@ -129,6 +129,14 @@ div.gallery {
    padding-left: 35px;
   }
 
-
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+ }
  
   
